--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -20,7 +20,6 @@
     </div>
     <ul class="sidebar-menu" data-widget="tree">
       <li>
-        <a th:href="@{/sales/report}">
         <a th:href="@{/Admin}">
           <i class="fa fa-tachometer-alt"></i> <span>Dashboard</span>
         </a>
@@ -35,6 +34,7 @@
         </a>
         <ul class="treeview-menu">
           <li><a th:href="@{/Admin/report}"><i class="fa-solid fa-users"></i>Báo cáo khách hàng</a></li>
+          <li><a th:href="@{/sales/report}"><i class="fas fa-coins"></i></i>Báo cáo doanh thu</a></li>
         </ul>
       </li>
 
