--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" th:href="@{/css/admin/layout/layout.css}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
         .alert {
             padding: 12px 20px;
@@ -113,7 +114,9 @@
                 <td th:text="${employee.employeePosition != null ? employee.employeePosition.positionName : 'null'}"></td>
                 <td class="d-flex justify-content-center">
                     <button class="btn btn-warning btn-sm btn-edit-employee"
-                            th:data-employee-id="${employee.employeeId}">
+                            data-bs-toggle="modal" data-bs-target="#editEmployeeModal" type="button"
+                            onclick="selectEmployee(this);removeErrorMessages()"
+                            th:data-employee-id="${employee.employeeId}" >
                         <i class="fas fa-edit"></i>
                     </button>
                 </td>
@@ -242,80 +245,82 @@
         </div>
     </div>
 
-    <!-- Modal Sửa Nhân Viên -->
-<!--    <div class="modal fade" id="editEmployeeModal" tabindex="-1" aria-labelledby="editEmployeeModalLabel" aria-hidden="true">-->
-<!--        <div class="modal-dialog modal-lg">-->
-<!--            <div class="modal-content">-->
-<!--                <div class="modal-header">-->
-<!--                    <h5 class="modal-title" id="editEmployeeModalLabel">Chỉnh Sửa Thông Tin Nhân Viên</h5>-->
-<!--                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--                </div>-->
-<!--                <div class="modal-body">-->
-<!--                    <form id="editEmployeeForm" th:action="@{/Admin/employee-manager/edit}" method="POST">-->
-<!--                        &lt;!&ndash; Truyền các tham số hiện tại để giữ trạng thái khi quay lại &ndash;&gt;-->
-<!--                        <input type="hidden" name="page" th:value="${currentPage}">-->
-<!--                        <input type="hidden" name="size" value="3">-->
-<!--                        <input type="hidden" name="searchField" th:value="${field}">-->
-<!--                        <input type="hidden" name="searchInput" th:value="${filterKeyWord}">-->
+<!--     Modal Sửa Nhân Viên-->
+    <div class="modal fade" id="editEmployeeModal" tabindex="-1" aria-labelledby="editEmployeeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editEmployeeModalLabel">Chỉnh Sửa Thông Tin Nhân Viên</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form onsubmit="submitEditForm(this)" id="editEmployeeForm" th:action="@{/Admin/employee-manager/edit}" method="POST">
+                        <small class="fst-italic text-secondary fs-6">Mặc định sau khi cập nhật nhân viên sẽ được kích hoạt!</small>
+                        <input type="hidden" id="editEmployeeId" name="employeeId">
+                        <input type="hidden" id="editUserId" name="userId">
 
-<!--                        <input type="hidden" id="editEmployeeId" name="employeeId">-->
-<!--                        <input type="hidden" id="editUserId" name="userId">-->
-
-<!--                        <div class="row">-->
-<!--                            <div class="col-md-6 mb-3">-->
-<!--                                <label for="editEmployeeName" class="form-label">Họ và Tên:</label>-->
-<!--                                <input type="text" class="form-control" id="editEmployeeName" name="employeeName" required>-->
-<!--                            </div>-->
-<!--                            <div class="col-md-6 mb-3">-->
-<!--                                <label for="editEmployeeBirthday" class="form-label">Ngày Sinh:</label>-->
-<!--                                <input type="date" class="form-control" id="editEmployeeBirthday" name="employeeBirthday" required>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="row">-->
-<!--                            <div class="col-md-6 mb-3">-->
-<!--                                <label for="editEmail" class="form-label">Email:</label>-->
-<!--                                <input type="email" class="form-control" id="editEmail" name="email" required>-->
-<!--                            </div>-->
-<!--                            <div class="col-md-6 mb-3">-->
-<!--                                <label for="editEmployeePhone" class="form-label">Số điện thoại:</label>-->
-<!--                                <input type="text" class="form-control" id="editEmployeePhone" name="employeePhone" required>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="mb-3">-->
-<!--                            <label for="editEmployeeAddress" class="form-label">Địa chỉ thường trú:</label>-->
-<!--                            <input type="text" class="form-control" id="editEmployeeAddress" name="employeeAddress" required>-->
-<!--                        </div>-->
-<!--                        <div class="mb-3">-->
-<!--                            <label for="editEmployeePosition" class="form-label">Công việc:</label>-->
-<!--                            <select class="form-select" id="editEmployeePosition" name="employeePosition" required>-->
-<!--                                <option value="" disabled selected>Chọn công việc</option>-->
-<!--                                <option th:each="position : ${employeePositions}"-->
-<!--                                        th:value="${position.positionId}"-->
-<!--                                        th:text="${position.positionName}">-->
-<!--                                </option>-->
-<!--                            </select>-->
-<!--                        </div>-->
-<!--                        <div class="row">-->
-<!--                            <div class="col-md-6 mb-3">-->
-<!--                                <label for="editUsername" class="form-label">Tên đăng nhập:</label>-->
-<!--                                <input type="text" class="form-control" id="editUsername" name="username" required>-->
-<!--                            </div>-->
-<!--                            <div class="col-md-6 mb-3">-->
-<!--                                <label for="editPassword" class="form-label">Mật khẩu:</label>-->
-<!--                                <div class="input-group">-->
-<!--                                    <input type="password" class="form-control" id="editPassword" name="password" required>-->
-<!--                                    <button class="btn btn-outline-secondary" type="button" id="togglePassword">-->
-<!--                                        <i class="fas fa-eye" id="togglePasswordIcon"></i>-->
-<!--                                    </button>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <button type="submit" class="btn btn-primary">Cập Nhật</button>-->
-<!--                    </form>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="editEmployeeName" class="form-label">Họ và Tên:</label>
+                                <input type="text" class="form-control" id="editEmployeeName" name="employeeName" >
+                                <small class="text-danger errorEditForm  fst-italic " style="font-size: 14px"></small>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="editEmployeeBirthday" class="form-label">Ngày Sinh:</label>
+                                <input type="date" class="form-control" id="editEmployeeBirthday" name="employeeBirthday" >
+                                <small class="text-danger errorEditForm  fst-italic " style="font-size: 14px"></small>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="editEmail" class="form-label">Email:</label>
+                                <input type="email" class="form-control" id="editEmail" name="email" >
+                                <small class="text-danger errorEditForm  fst-italic " style="font-size: 14px"></small>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="editEmployeePhone" class="form-label">Số điện thoại:</label>
+                                <input type="text" class="form-control" id="editEmployeePhone" name="employeePhone" >
+                                <small class="text-danger errorEditForm  fst-italic " style="font-size: 14px"></small>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editEmployeeAddress" class="form-label">Địa chỉ thường trú:</label>
+                            <input type="text" class="form-control" id="editEmployeeAddress" name="employeeAddress" >
+                            <small class="text-danger errorEditForm  fst-italic " style="font-size: 14px"></small>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editEmployeePosition" class="form-label">Công việc:</label>
+                            <select class="form-select" id="editEmployeePosition" name="employeePosition" >
+                                <option value="" disabled selected>Chọn công việc</option>
+                                <option th:each="position : ${employeePositions}"
+                                        th:value="${position.positionId}"
+                                        th:text="${position.positionName}">
+                                </option>
+                            </select>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="editUsername" class="form-label">Tên đăng nhập:</label>
+                                <input type="text" class="form-control" id="editUsername" name="username" readOnly >
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="editPassword" class="form-label">Mật khẩu <span class="fst-italic fs-6">(Nhập nếu muốn thay đổi)</span>:</label>
+                                <div class="input-group">
+                                    <input type="password" class="form-control" id="editPassword" name="password" >
+                                    <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                                        <i class="fas fa-eye" id="togglePasswordIcon"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Cập Nhật</button>
+                        <p class="text-success mt-2 fs-6 fst-italic" id="editSuccessMessage"></p>
+                        <p class="text-danger mt-2 fs-6 fst-italic" id="editErrorMessage"></p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Modal Thêm Chức Vụ Mới -->
     <div class="modal fade" id="addPositionModal" tabindex="-1" aria-labelledby="addPositionModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -386,5 +391,157 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script th:src="@{/js/admin/listEmployee.js}" type="text/javascript"></script>
+<script>
+    /**
+     * @author Sinhph
+     * @description This script handles user editing functionality.
+     * @version 1.0.0
+     * @date 2025-03-19
+     */
+
+    /**
+     * @description select user and fill data to edit form
+     */
+    function selectEmployee(button) {
+
+        let employeeId = $(button).data('employee-id');
+
+        //get employee by id
+        $.ajax({
+            url: '/api/employees/getUserById/' + employeeId,
+            type: 'GET',
+            success: function (response) {
+                console.log(response);
+                let editEmployeeForm = $('#editEmployeeModal');
+                editEmployeeForm.find('#editEmployeeId').val(response.employeeId);
+                editEmployeeForm.find('#editUserId').val(response.userId);
+                editEmployeeForm.find('#editEmployeeName').val(response.employeeName);
+                editEmployeeForm.find('#editEmployeeBirthday').val(response.employeeBirthday);
+                editEmployeeForm.find('#editEmail').val(response.email);
+                editEmployeeForm.find('#editEmployeePhone').val(response.employeePhone);
+                editEmployeeForm.find('#editEmployeeAddress').val(response.employeeAddress);
+                editEmployeeForm.find('#editEmployeePosition').val(response.employeePosition);
+                editEmployeeForm.find('#editUsername').val(response.username);
+                editEmployeeForm.find('#editPassword').val("");
+            },
+            error: function (error) {
+                console.log(error);
+            }
+        });
+    }
+
+    // Toggle password visibility
+    let editForm = $('#editEmployeeModal');
+    editForm.find("#togglePassword").click(function () {
+        let passwordInput = $('#editPassword');
+        let icon = $('#togglePasswordIcon');
+        if (passwordInput.attr('type') === 'password') {
+            passwordInput.attr('type', 'text');
+            icon.removeClass('fas fa-eye').addClass('fas fa-eye-slash');
+        } else {
+            passwordInput.attr('type', 'password');
+            icon.removeClass('fas fa-eye-slash').addClass('fas fa-eye');
+        }
+    });
+
+    /**
+     * @description submit edit form
+     */
+    function submitEditForm(form){
+        event.preventDefault();
+        $(form).find('.errorEditForm').text("");
+        $(form).find('#editErrorMessage').text("");
+        let employeeId = $(form).find('#editEmployeeId').val();
+        let userId = $(form).find('#editUserId').val();
+        let employeeName = $(form).find('#editEmployeeName').val();
+        let employeeBirthday = $(form).find('#editEmployeeBirthday').val();
+        let email = $(form).find('#editEmail').val();
+        let employeePhone = $(form).find('#editEmployeePhone').val();
+        let employeeAddress = $(form).find('#editEmployeeAddress').val();
+        let employeePosition = $(form).find('#editEmployeePosition').val();
+        let username = $(form).find('#editUsername').val();
+        let password = $(form).find('#editPassword').val();
+
+
+        let data = {
+            employeeId: employeeId,
+            userId: userId,
+            employeeName: employeeName,
+            employeeBirthday: employeeBirthday,
+            email: email,
+            employeePhone: employeePhone,
+            employeeAddress: employeeAddress,
+            employeePosition: employeePosition,
+            username: username,
+            password: password
+        };
+
+        $.ajax({
+            url: '/api/employees/edit',
+            type: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify(data),
+            success: function (response) {
+                if(response.status == "success"){
+                    let successMessage = $('#editSuccessMessage');
+                    successMessage.text(response.message + " - Trang sẽ tự động tải lại sau 2s");
+                    setTimeout(function(){
+                        location.reload();
+                    }, 2000);
+                }else {
+                    console.log(response);
+                    let errorMessage = $('#editErrorMessage');
+                    errorMessage.text("Có lỗi xảy ra, vui lòng kiểm tra lại thông tin");
+
+                    //error Name
+                    if(response.errors.employeeName != null){
+                        let nameError = $(form).find('#editEmployeeName').parent().find('small');
+                        nameError.text(response.errors.employeeName);
+                    }
+                    //error Birthday
+                    if(response.errors.employeeBirthday != null){
+                        let birthdayError = $(form).find('#editEmployeeBirthday').parent().find('small');
+                        birthdayError.text(response.errors.employeeBirthday);
+                    }
+
+                    //error Email
+                    if(response.errors.email != null){
+                        let emailError = $(form).find('#editEmail').parent().find('small');
+                        emailError.text(response.errors.email);
+                    }
+                    //error Phone
+                    if(response.errors.employeePhone != null){
+                        let phoneError = $(form).find('#editEmployeePhone').parent().find('small');
+                        phoneError.text(response.errors.employeePhone);
+                    }
+                    //error Address
+                    if(response.errors.employeeAddress != null){
+                        let addressError = $(form).find('#editEmployeeAddress').parent().find('small');
+                        addressError.text(response.errors.employeeAddress);
+                    }
+                    //error Position
+                    if(response.errors.employeePosition != null){
+                        let positionError = $(form).find('#editEmployeePosition').parent().find('small');
+                        positionError.text(response.errors.employeePosition);
+                    }
+
+                }
+
+            },
+            error: function (error) {
+
+            }
+        });
+        return false;
+    }
+
+    function removeErrorMessages(){
+        let editForm = $('#editEmployeeModal');
+        editForm.find('.errorEditForm').text("");
+        editForm.find('#editErrorMessage').text("");
+    }
+
+
+</script>
 </body>
 </html>
