--- a/finalModule/finalModule/src/main/resources/templates/login.html
+++ b/finalModule/finalModule/src/main/resources/templates/login.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" th:href="@{/css/login.css}">
-  <title> Đăng nhập  - Electronics Store</title>
+  <title>Đăng nhập - Electronics Store</title>
 </head>
 <body>
 <div class="logo-container">
-  <img src="./images/logo/logo.png" alt="Electronics Store Logo" class="logo">
+  <img th:src="@{/images/logo/logo.png}" alt="Electronics Store Logo" class="logo">
 </div>
 
 <div class="scroll-down">Kéo xuống để đăng nhập
@@ -25,11 +25,11 @@
   <div class="modal-container">
     <div class="modal-left">
       <div class="logo-in-modal">
-        <img src="./images/logo/logo.png" alt="Electronics Store Logo">
+        <h2>Electronics Store</h2>
       </div>
       <h1 class="modal-title">Xin chào!</h1>
       <br>
-      <form name="f" action="/login" method="POST">
+      <form name="f" th:action="@{/login}" method="POST">
         <div class="input-block">
           <label class="input-label">Tên đăng nhập</label>
           <input type="text" name="username" placeholder="Tên đăng nhập">
@@ -45,11 +45,12 @@
       </form>
     </div>
     <div class="modal-right">
-      <img src="./images/logo/logo.png" alt="Electronics Store Logo">
+      <img th:src="@{/images/logo/logo.png}" alt="Electronics Store Logo">
     </div>
   </div>
   <button class="modal-button">Đăng nhập</button>
 </div>
+
 <script th:src="@{/js/login.js}"></script>
 </body>
 </html>
