--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -83,14 +83,6 @@
     </ul>
   </section>
 </aside>
-<script th:fragment="sidebarScript">
-  document.querySelectorAll('.treeview > a').forEach(item => {
-    item.addEventListener('click', event => {
-      event.preventDefault();
-      const parent = item.parentElement;
-      parent.classList.toggle('open');
-    });
-  });
-</script>
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 </body>
 </html>
