--- a/finalModule/finalModule/src/main/resources/templates/admin/customer/historyCustomer.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/customer/historyCustomer.html
@@ -258,7 +258,7 @@
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     document.querySelectorAll(".view-order-btn").forEach(button => {
