--- a/finalModule/finalModule/src/main/resources/templates/admin/customer/listCustomer.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/customer/listCustomer.html
@@ -202,6 +202,7 @@
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
