--- a/finalModule/finalModule/src/main/resources/templates/admin/order/addOrder.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/order/addOrder.html
@@ -367,6 +367,7 @@
 
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/order.js}"></script>
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 <script>
 
     if($('.productList').length > 1){
