--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listProduct.html
@@ -310,6 +310,7 @@
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 <script th:src="@{/js/admin/deleteMultipleProduct.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
