--- a/finalModule/finalModule/src/main/resources/templates/account.html
+++ b/finalModule/finalModule/src/main/resources/templates/account.html
@@ -17,8 +17,8 @@
     <label>Tên đăng nhập:</label>
     <input type="text" th:value="${user.username}" disabled />
     <br/>
-    <label>Họ và tên:</label>
-    <input type="text" name="fullName" th:value="${user.fullName}" />
+<!--    <label>Họ và tên:</label>-->
+<!--    <input type="text" name="fullName" th:value="${user.fullName}" />-->
     <br/>
     <label>Email:</label>
     <input type="email" name="email" th:value="${user.email}" />
