--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/header.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/header.html
@@ -31,7 +31,7 @@
           <span class="user-name" th:text="${username}">Admin</span>
         </li>
         <li>
-          <a th:href="@{/Admin/profile}">
+          <a th:href="@{/account}">
             <i class="fas fa-user"></i>
             Thông tin cá nhân
           </a>
